--- a/百家乐效果.html
+++ b/百家乐效果.html
@@ -342,106 +342,106 @@
           </div>
         </div>
 
-        <!-- Unnamed (组合) -->
-        <div id="u65" class="ax_default">
-
-          <!-- Unnamed (矩形) -->
-          <div id="u66" class="ax_default box_1">
-            <img id="u66_img" class="img " src="images/百家乐效果/u66.png"/>
-            <!-- Unnamed () -->
-            <div id="u67" class="text" style="display: none; visibility: hidden">
-              <p><span></span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (矩形) -->
-          <div id="u68" class="ax_default label">
-            <div id="u68_div" class=""></div>
-            <!-- Unnamed () -->
-            <div id="u69" class="text" style="visibility: visible;">
-              <p><span>我是隔壁老王</span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (矩形) -->
-          <div id="u70" class="ax_default box_1">
-            <img id="u70_img" class="img " src="images/百家乐效果/u70.png"/>
-            <!-- Unnamed () -->
-            <div id="u71" class="text" style="display: none; visibility: hidden">
-              <p><span></span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (矩形) -->
-          <div id="u72" class="ax_default label">
-            <div id="u72_div" class=""></div>
-            <!-- Unnamed () -->
-            <div id="u73" class="text" style="visibility: visible;">
-              <p><span>9999999.99</span></p>
-            </div>
-          </div>
-        </div>
-
         <!-- Unnamed (矩形) -->
-        <div id="u74" class="ax_default box_1">
-          <img id="u74_img" class="img " src="images/百家乐效果/u66.png"/>
+        <div id="u65" class="ax_default box_1">
+          <img id="u65_img" class="img " src="images/百家乐效果/u65.png"/>
           <!-- Unnamed () -->
-          <div id="u75" class="text" style="display: none; visibility: hidden">
+          <div id="u66" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u76" class="ax_default label">
-          <div id="u76_div" class=""></div>
+        <div id="u67" class="ax_default box_1">
+          <img id="u67_img" class="img " src="images/百家乐效果/u67.png"/>
           <!-- Unnamed () -->
-          <div id="u77" class="text" style="visibility: visible;">
-            <p><span>我是隔壁老王</span></p>
-          </div>
-        </div>
-
-        <!-- Unnamed (矩形) -->
-        <div id="u78" class="ax_default box_1">
-          <img id="u78_img" class="img " src="images/百家乐效果/u70.png"/>
-          <!-- Unnamed () -->
-          <div id="u79" class="text" style="display: none; visibility: hidden">
+          <div id="u68" class="text" style="display: none; visibility: hidden">
             <p><span></span></p>
           </div>
         </div>
 
         <!-- Unnamed (矩形) -->
-        <div id="u80" class="ax_default label">
-          <div id="u80_div" class=""></div>
+        <div id="u69" class="ax_default box_1">
+          <div id="u69_div" class=""></div>
           <!-- Unnamed () -->
-          <div id="u81" class="text" style="visibility: visible;">
+          <div id="u70" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u71" class="ax_default label">
+          <div id="u71_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u72" class="text" style="visibility: visible;">
+            <p><span>昵称有六个字</span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u73" class="ax_default box_1">
+          <div id="u73_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u74" class="text" style="display: none; visibility: hidden">
+            <p><span></span></p>
+          </div>
+        </div>
+
+        <!-- Unnamed (矩形) -->
+        <div id="u75" class="ax_default label">
+          <div id="u75_div" class=""></div>
+          <!-- Unnamed () -->
+          <div id="u76" class="text" style="visibility: visible;">
             <p><span>9999999.99</span></p>
           </div>
         </div>
 
         <!-- Unnamed (组合) -->
-        <div id="u82" class="ax_default">
+        <div id="u77" class="ax_default">
 
           <!-- Unnamed (矩形) -->
-          <div id="u83" class="ax_default box_1">
-            <img id="u83_img" class="img " src="images/百家乐效果/u66.png"/>
+          <div id="u78" class="ax_default box_1">
+            <div id="u78_div" class=""></div>
             <!-- Unnamed () -->
-            <div id="u84" class="text" style="display: none; visibility: hidden">
+            <div id="u79" class="text" style="display: none; visibility: hidden">
               <p><span></span></p>
             </div>
           </div>
 
           <!-- Unnamed (矩形) -->
-          <div id="u85" class="ax_default label">
-            <div id="u85_div" class=""></div>
+          <div id="u80" class="ax_default label">
+            <div id="u80_div" class=""></div>
             <!-- Unnamed () -->
-            <div id="u86" class="text" style="visibility: visible;">
-              <p><span>我是隔壁老王</span></p>
+            <div id="u81" class="text" style="visibility: visible;">
+              <p><span>昵称有六个字</span></p>
             </div>
           </div>
 
           <!-- Unnamed (矩形) -->
+          <div id="u82" class="ax_default box_1">
+            <div id="u82_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u83" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u84" class="ax_default label">
+            <div id="u84_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u85" class="text" style="visibility: visible;">
+              <p><span>9999999.99</span></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Unnamed (组合) -->
+        <div id="u86" class="ax_default">
+
+          <!-- Unnamed (矩形) -->
           <div id="u87" class="ax_default box_1">
-            <img id="u87_img" class="img " src="images/百家乐效果/u70.png"/>
+            <div id="u87_div" class=""></div>
             <!-- Unnamed () -->
             <div id="u88" class="text" style="display: none; visibility: hidden">
               <p><span></span></p>
@@ -453,35 +453,35 @@
             <div id="u89_div" class=""></div>
             <!-- Unnamed () -->
             <div id="u90" class="text" style="visibility: visible;">
+              <p><span>昵称有六个字</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u91" class="ax_default box_1">
+            <div id="u91_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u92" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u93" class="ax_default label">
+            <div id="u93_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u94" class="text" style="visibility: visible;">
               <p><span>9999999.99</span></p>
             </div>
           </div>
         </div>
 
         <!-- Unnamed (组合) -->
-        <div id="u91" class="ax_default">
-
-          <!-- Unnamed (矩形) -->
-          <div id="u92" class="ax_default box_1">
-            <img id="u92_img" class="img " src="images/百家乐效果/u66.png"/>
-            <!-- Unnamed () -->
-            <div id="u93" class="text" style="display: none; visibility: hidden">
-              <p><span></span></p>
-            </div>
-          </div>
-
-          <!-- Unnamed (矩形) -->
-          <div id="u94" class="ax_default label">
-            <div id="u94_div" class=""></div>
-            <!-- Unnamed () -->
-            <div id="u95" class="text" style="visibility: visible;">
-              <p><span>我是隔壁老王</span></p>
-            </div>
-          </div>
+        <div id="u95" class="ax_default">
 
           <!-- Unnamed (矩形) -->
           <div id="u96" class="ax_default box_1">
-            <img id="u96_img" class="img " src="images/百家乐效果/u70.png"/>
+            <div id="u96_div" class=""></div>
             <!-- Unnamed () -->
             <div id="u97" class="text" style="display: none; visibility: hidden">
               <p><span></span></p>
@@ -493,6 +493,24 @@
             <div id="u98_div" class=""></div>
             <!-- Unnamed () -->
             <div id="u99" class="text" style="visibility: visible;">
+              <p><span>昵称有六个字</span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u100" class="ax_default box_1">
+            <div id="u100_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u101" class="text" style="display: none; visibility: hidden">
+              <p><span></span></p>
+            </div>
+          </div>
+
+          <!-- Unnamed (矩形) -->
+          <div id="u102" class="ax_default label">
+            <div id="u102_div" class=""></div>
+            <!-- Unnamed () -->
+            <div id="u103" class="text" style="visibility: visible;">
               <p><span>9999999.99</span></p>
             </div>
           </div>
