--- a/百家乐效果.html
+++ b/百家乐效果.html
@@ -392,7 +392,7 @@
           <div id="u75_div" class=""></div>
           <!-- Unnamed () -->
           <div id="u76" class="text" style="visibility: visible;">
-            <p><span>9999999.99</span></p>
+            <p><span>99999.99</span></p>
           </div>
         </div>
 
@@ -431,7 +431,7 @@
             <div id="u84_div" class=""></div>
             <!-- Unnamed () -->
             <div id="u85" class="text" style="visibility: visible;">
-              <p><span>9999999.99</span></p>
+              <p><span>99999.99</span></p>
             </div>
           </div>
         </div>
@@ -471,7 +471,7 @@
             <div id="u93_div" class=""></div>
             <!-- Unnamed () -->
             <div id="u94" class="text" style="visibility: visible;">
-              <p><span>9999999.99</span></p>
+              <p><span>99999.99</span></p>
             </div>
           </div>
         </div>
@@ -511,7 +511,7 @@
             <div id="u102_div" class=""></div>
             <!-- Unnamed () -->
             <div id="u103" class="text" style="visibility: visible;">
-              <p><span>9999999.99</span></p>
+              <p><span>99999.99</span></p>
             </div>
           </div>
         </div>
